completing all the viwes

--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -1,3 +1,4 @@
+<!-- <div class="js-fullheight"> -->
 <div class="hero-wrap js-fullheight">
     <div class="overlay"></div>
     <div id="particles-js"></div>
@@ -306,18 +307,23 @@
         <div class="row">
             <div class="col-md-12 text-center">
 
-                <p>     
+                <p>
+                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;
                     <script>
                         document.write(new Date().getFullYear());
                     </script> All rights reserved | Edu-Fare <i class="icon-heart" aria-hidden="true"></i> by <a
                         href="https://colorlib.com" target="_blank">Team Atom</a>
+                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
             </div>
         </div>
     </div>
 </footer>
 
+
+
+<!-- loader -->
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
         <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
         <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
